[gd_scene load_steps=52 format=2]

[ext_resource path="res://Assets/PlayerAssets/TankAssets/PlayerPanzerGun.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player/PlayerTank.gd" type="Script" id=2]
[ext_resource path="res://Assets/PlayerAssets/TankAssets/tank gif1.png" type="Texture" id=3]
[ext_resource path="res://Assets/Extras/TankTools/Crosshair.png" type="Texture" id=4]
[ext_resource path="res://Assets/PlayerAssets/TankAssets/tank gif3.png" type="Texture" id=5]
[ext_resource path="res://Assets/PlayerAssets/TankAssets/tank gif2.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/RepairKit.png" type="Texture" id=7]
[ext_resource path="res://icon.png" type="Texture" id=8]
[ext_resource path="res://Assets/GUI/ArmorIcon.png" type="Texture" id=9]
[ext_resource path="res://Assets/GUI/LeftButton.png" type="Texture" id=10]
[ext_resource path="res://Assets/GUI/RightButton.png" type="Texture" id=11]
[ext_resource path="res://Assets/GUI/ShootButton.png" type="Texture" id=12]
[ext_resource path="res://Assets/GUI/Left2Button.png" type="Texture" id=13]
[ext_resource path="res://Assets/GUI/Right2Button.png" type="Texture" id=14]
[ext_resource path="res://Assets/Extras/Missiles/Bullet.png" type="Texture" id=15]
[ext_resource path="res://Fonts/DynaPuff-VariableFont_wdth,wght(1)(1).ttf" type="DynamicFontData" id=16]
[ext_resource path="res://Assets/Extras/Missiles/Missile3.png" type="Texture" id=17]
[ext_resource path="res://Assets/GUI/HealthIcon.png" type="Texture" id=18]
[ext_resource path="res://Assets/GUI/TabTab - Kopya (2) - Kopya.png" type="Texture" id=19]
[ext_resource path="res://Assets/GUI/ShootButtonAni2.png" type="Texture" id=20]
[ext_resource path="res://Assets/PlayerAssets/TankAssets/PlayerTankBody.png" type="Texture" id=21]
[ext_resource path="res://Scenes/Player/GUI/Joystick.tscn" type="PackedScene" id=22]
[ext_resource path="res://Scenes/Menu/PauseMenu.tscn" type="PackedScene" id=23]
[ext_resource path="res://Sounds/Sfx/Player/PlayerShoot1.wav" type="AudioStream" id=24]
[ext_resource path="res://Assets/Extras/Missiles/Missile2.png" type="Texture" id=25]
[ext_resource path="res://Sounds/Sfx/Player/ReturnSound.mp3" type="AudioStream" id=26]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46, 93.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 48, 91.5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 20 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 20 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 20 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 20 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 20 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 20 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 20 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 20 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "Shoot",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 611, 338.5 )

[sub_resource type="CircleShape2D" id=19]
radius = 41.0

[sub_resource type="RectangleShape2D" id=34]
extents = Vector2( 171.5, 12.5 )

[sub_resource type="Animation" id=31]
resource_name = "Idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TopGun/TopGunSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopGun/TopGunSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -27.6661, 129.28 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=33]
resource_name = "Shoot"
length = 0.6
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("TopGun/TopGunSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14, 0.19, 0.27, 0.35, 0.43, 0.51, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TopGun/TopGunSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.19, 0.35, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -18.6661, 129.28 ), Vector2( -13.6661, 130.28 ), Vector2( -12.6661, 127.28 ), Vector2( -11.6661, 128.28 ), Vector2( -18.6661, 129.28 ) ]
}

[sub_resource type="DynamicFont" id=16]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.858824, 0.0313726, 0.0313726, 1 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.00784314, 0.00392157, 0.00392157, 1 )

[sub_resource type="DynamicFont" id=35]

[sub_resource type="StyleBoxFlat" id=36]
bg_color = Color( 0.121569, 0.87451, 0.0666667, 1 )

[sub_resource type="StyleBoxFlat" id=37]
bg_color = Color( 0, 0, 0, 1 )

[node name="PlayerTank" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -16, 1 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="TankTracks" type="Node2D" parent="."]

[node name="TankTrackPos" type="Position2D" parent="TankTracks"]
position = Vector2( -112, -1 )

[node name="TankTrackPos2" type="Position2D" parent="TankTracks"]
position = Vector2( 48, -1 )

[node name="TrackTimer" type="Timer" parent="TankTracks"]
wait_time = 0.06
one_shot = true

[node name="MoveSmokeTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="PlayerArea" type="Area2D" parent="." groups=["Player"]]
position = Vector2( 0, -28 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2( -17, 30 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = 1.5708
scale = Vector2( 1, 0.995404 )
frames = SubResource( 3 )
animation = "Idle"
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -28 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0

[node name="MobileController" type="CanvasLayer" parent="."]

[node name="ChangeWeaponsButton" type="TouchScreenButton" parent="MobileController"]
position = Vector2( 264, 0 )
normal = ExtResource( 8 )

[node name="Missile1" type="TouchScreenButton" parent="MobileController/ChangeWeaponsButton"]
visible = false
position = Vector2( 209, 19 )
scale = Vector2( 4, 3.93333 )
normal = ExtResource( 15 )

[node name="Missile2" type="TouchScreenButton" parent="MobileController/ChangeWeaponsButton"]
visible = false
position = Vector2( 95, 22 )
scale = Vector2( 1.03125, 0.84375 )
normal = ExtResource( 25 )

[node name="Missile3" type="TouchScreenButton" parent="MobileController/ChangeWeaponsButton"]
visible = false
position = Vector2( -24, 17 )
normal = ExtResource( 17 )

[node name="RepairButton" type="TouchScreenButton" parent="MobileController/ChangeWeaponsButton"]
visible = false
position = Vector2( -131, 20 )
scale = Vector2( 2, 2 )
normal = ExtResource( 7 )

[node name="Missile1Label" type="Label" parent="MobileController/ChangeWeaponsButton"]
visible = false
margin_left = 223.0
margin_top = 74.0
margin_right = 245.0
margin_bottom = 104.0
custom_fonts/font = SubResource( 8 )
text = "âˆž"

[node name="CurrentMissileLabel" type="Label" parent="MobileController/ChangeWeaponsButton"]
margin_left = 24.0
margin_top = 66.0
margin_right = 49.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="Missile2Label" type="Label" parent="MobileController/ChangeWeaponsButton"]
visible = false
margin_left = 113.0
margin_top = 72.0
margin_right = 138.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="Missile3Label" type="Label" parent="MobileController/ChangeWeaponsButton"]
visible = false
margin_left = -7.0
margin_top = 71.0
margin_right = 18.0
margin_bottom = 101.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="RepairKitLabel" type="Label" parent="MobileController/ChangeWeaponsButton"]
visible = false
margin_left = -115.0
margin_top = 72.0
margin_right = -90.0
margin_bottom = 102.0
custom_fonts/font = SubResource( 8 )
text = "10"

[node name="TabClose" type="TouchScreenButton" parent="MobileController/ChangeWeaponsButton"]
visible = false
position = Vector2( -1, 95 )
scale = Vector2( 2, 2 )
normal = ExtResource( 19 )

[node name="MoveRight" type="TouchScreenButton" parent="MobileController"]
position = Vector2( 1080, 520 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 11 )
pressed = ExtResource( 14 )

[node name="MoveLeft" type="TouchScreenButton" parent="MobileController"]
position = Vector2( 880, 520 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 10 )
pressed = ExtResource( 13 )

[node name="FireShoot" type="TouchScreenButton" parent="MobileController"]
position = Vector2( 976, 386 )
scale = Vector2( 1.5, 1.5 )
normal = ExtResource( 12 )

[node name="CurrentMissile" type="Sprite" parent="MobileController/FireShoot"]
position = Vector2( 32, 32 )
scale = Vector2( 2, 2 )
texture = ExtResource( 15 )

[node name="ShootButtonAni" type="AnimatedSprite" parent="MobileController"]
self_modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 1025, 435 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 29 )

[node name="Joystick" parent="MobileController" instance=ExtResource( 22 )]
position = Vector2( 177, 557 )
scale = Vector2( 3, 3 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="BreakTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="SpeedTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RadarBoundaryArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RadarBoundaryArea"]
visible = false
position = Vector2( 0, -29.5 )
scale = Vector2( 0.9, 0.9 )
shape = SubResource( 15 )

[node name="TankRepairTimer" type="Timer" parent="."]
one_shot = true

[node name="Egzoz" type="Position2D" parent="."]
position = Vector2( -112, 0 )

[node name="BushArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BushArea"]
visible = false
position = Vector2( -22, 0 )
shape = SubResource( 19 )

[node name="TopGun" type="Node2D" parent="."]
position = Vector2( -9, 0 )

[node name="CroosHair" type="Sprite" parent="TopGun"]
position = Vector2( 464, -2.04636e-12 )
scale = Vector2( 2, 2 )
z_index = 1
texture = ExtResource( 4 )

[node name="CrossArea" type="Area2D" parent="TopGun/CroosHair"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopGun/CroosHair/CrossArea"]
position = Vector2( -160.5, 0.5 )
shape = SubResource( 34 )

[node name="TopGunSprite" type="Sprite" parent="TopGun"]
position = Vector2( -11.6661, 128.28 )
rotation = 1.5708
texture = ExtResource( 6 )
offset = Vector2( -128.28, -73.6657 )

[node name="CroosPos" type="Position2D" parent="TopGun"]
position = Vector2( 464, 0 )

[node name="ShootPosition" type="Position2D" parent="TopGun"]
position = Vector2( 114, 1 )

[node name="SmokePosition" type="Position2D" parent="TopGun"]
position = Vector2( 9, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 31 )
anims/Shoot = SubResource( 33 )

[node name="TankRepairSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="DefaultCrossPos" type="Position2D" parent="."]
position = Vector2( 455, 0 )

[node name="PlayerStat" type="CanvasLayer" parent="."]

[node name="HealthBar" type="ProgressBar" parent="PlayerStat"]
margin_left = 1104.0
margin_top = 32.0
margin_right = 1272.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 16 )
custom_styles/fg = SubResource( 17 )
custom_styles/bg = SubResource( 18 )
max_value = 15.0
value = 5.0

[node name="ArmorBar" type="ProgressBar" parent="PlayerStat"]
margin_left = 1104.0
margin_top = 78.0
margin_right = 1272.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 35 )
custom_styles/fg = SubResource( 36 )
custom_styles/bg = SubResource( 37 )
value = 50.0

[node name="HeatIcon" type="Sprite" parent="PlayerStat"]
position = Vector2( 1064, 40 )
texture = ExtResource( 18 )

[node name="ArmorIcon" type="Sprite" parent="PlayerStat"]
position = Vector2( 1064.5, 84.625 )
texture = ExtResource( 9 )

[node name="PauseMenu" parent="." instance=ExtResource( 23 )]

[node name="PlayerSound" type="Node" parent="."]

[node name="ReturnSound" type="AudioStreamPlayer" parent="PlayerSound"]
stream = ExtResource( 26 )
volume_db = 9.37

[node name="PlayerShoot" type="AudioStreamPlayer" parent="PlayerSound"]
stream = ExtResource( 24 )
volume_db = 2.811

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="PlayerSound"]

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="PlayerSound"]

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="PlayerSound"]

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="PlayerSound"]

[node name="MultiSycnTimer" type="Timer" parent="."]
wait_time = 0.04
autostart = true

[connection signal="timeout" from="TankTracks/TrackTimer" to="." method="_on_TrackTimer_timeout"]
[connection signal="timeout" from="MoveSmokeTimer" to="." method="_on_MoveSmokeTimer_timeout"]
[connection signal="area_entered" from="PlayerArea" to="." method="_on_PlayerArea_area_entered"]
[connection signal="pressed" from="MobileController/ChangeWeaponsButton" to="." method="_on_ChangeWeaponsButton_pressed"]
[connection signal="pressed" from="MobileController/ChangeWeaponsButton/Missile1" to="." method="_on_Missile1_pressed"]
[connection signal="pressed" from="MobileController/ChangeWeaponsButton/Missile2" to="." method="_on_Missile2_pressed"]
[connection signal="pressed" from="MobileController/ChangeWeaponsButton/Missile3" to="." method="_on_Missile3_pressed"]
[connection signal="pressed" from="MobileController/ChangeWeaponsButton/RepairButton" to="." method="_on_RepairButton_pressed"]
[connection signal="pressed" from="MobileController/ChangeWeaponsButton/TabClose" to="." method="_on_TabClose_pressed"]
[connection signal="pressed" from="MobileController/MoveRight" to="." method="_on_MoveRight_pressed"]
[connection signal="released" from="MobileController/MoveRight" to="." method="_on_MoveRight_released"]
[connection signal="pressed" from="MobileController/MoveLeft" to="." method="_on_MoveLeft_pressed"]
[connection signal="released" from="MobileController/MoveLeft" to="." method="_on_MoveLeft_released"]
[connection signal="pressed" from="MobileController/FireShoot" to="." method="_on_FireShoot_pressed"]
[connection signal="animation_finished" from="MobileController/ShootButtonAni" to="." method="_on_ShootButtonAni_animation_finished"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="BreakTimer" to="." method="_on_BreakTimer_timeout"]
[connection signal="timeout" from="SpeedTimer" to="." method="_on_SpeedTimer_timeout"]
[connection signal="timeout" from="TankRepairTimer" to="." method="_on_TankRepairTime_timeout"]
[connection signal="area_entered" from="BushArea" to="." method="_on_BushArea_area_entered"]
[connection signal="area_exited" from="BushArea" to="." method="_on_BushArea_area_exited"]
[connection signal="area_entered" from="TopGun/CroosHair/CrossArea" to="." method="_on_CrossArea_area_entered"]
[connection signal="area_exited" from="TopGun/CroosHair/CrossArea" to="." method="_on_CrossArea_area_exited"]
[connection signal="timeout" from="MultiSycnTimer" to="." method="_on_MultiSycnTimer_timeout"]
